--- a/app/views/layouts/_navigation.erb
+++ b/app/views/layouts/_navigation.erb
@@ -1,4 +1,4 @@
-<ul class="nav flex-column" id="side-nav">
+<ul class="nav nw-sidebar flex-column" id="side-nav">
   <% navigation.each do |nav| %>
       <% klass_names = 'nav-link' %>
       <% klass_names += ' active' if current_page?(nav[:path]) %>
