--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -23,6 +23,9 @@ body {
   .right {
     float: right;
   }
+  .text-center {
+    text-align: center;
+  }
 
   .manage-title-row {
     text-align: center;
