--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -12,9 +12,9 @@
     <div class="col-3 member-login">
       <% unless params[:controller] == 'sessions'%>
           <% if logged_in? %>
-              <div class="nav-item"><%= link_to "Log Out", login_path, class: 'nav-link' %></div>
-          <% else %>
               <div class="nav-item"><%= link_to "Log Out", logout_path, method: :delete, class: 'nav-link' %></div>
+          <% else %>
+              <div class="nav-item"><%= link_to "Log In", login_path, class: 'nav-link' %></div>
           <% end %>
       <%end%>
       <div class="navbar-brand">
