--- a/app/views/categories/manage.erb
+++ b/app/views/categories/manage.erb
@@ -16,11 +16,11 @@
 
   <% if @categories.present? %>
       <% @categories.each do |category| %>
-        <div class="row category-item-row">
+        <div class="row category-item-row item-row">
           <div class="col">
           </div>
           <div class="col-12">
-            <div class="row category-content">
+            <div class="row category-content row-content">
               <div class="col-1 category-symbol icon">
                 <i class="material-icons">bookmark_border</i>
               </div>
