--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.manage-users {
+  .user-item-row {
+    padding: 15px 0;
+    .admin-icon {
+      color: #730E15;
+      cursor: default;
+    }
+  }
+}
