fixed user form and flash messages

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -33,4 +33,12 @@ body {
   .content-body {
     background: white;
   }
+
+  .check-box {
+    margin-top: 5px;
+  }
+
+  .alert {
+    z-index: 1000;
+  }
 }
