--- a/app/views/resources/_form.erb
+++ b/app/views/resources/_form.erb
@@ -41,13 +41,13 @@
           <div class="dates row">
             <div class="date col">Created at: <%= resource.created_at.strftime('%d %b %y') %></div>
             <div class="date col">Updated at: <%= resource.updated_at.strftime('%d %b %y') %></div>
-            <div class="button col"><%= f.submit 'Save', class: "photographer-save-button btn btn-outline-primary btn-lg"%></div>
+            <div class="button col"><%= f.submit 'Save', class: "resource-save-button btn btn-outline-primary btn-lg"%></div>
           </div>
       <%else%>
           <div class="dates row">
             <div class="date col"></div>
             <div class="date col"></div>
-            <div class="button col"><%= f.submit 'Save', class: "image-save-button btn btn-outline-primary btn-lg"%></div>
+            <div class="button col"><%= f.submit 'Save', class: "resource-save-button btn btn-outline-primary btn-lg"%></div>
           </div>
       <%end%>
   <%end%>
