--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,6 +12,18 @@
        </div>
       <h3>NW Kendo</h3>
     </div>
+    <div class="col-6">
+      <% if flash[:notice] %>
+          <div class="alert alert-success" role="alert">
+            <%= flash[:notice] %>
+          </div>
+      <% end %>
+      <% if flash[:alert] %>
+          <div class="alert alert-danger" role="alert">
+            <%= flash[:alert] %>
+          </div>
+      <% end %>
+    </div>
     <div class="col-2"></div>
   </div>
 </header>
