--- a/app/views/users/edit.erb
+++ b/app/views/users/edit.erb
@@ -1,9 +1,22 @@
-<h1>Edit user</h1>
-
-<%= form_for @user do |f| %>
-
-    Email: <%= f.text_field :email %>
-    Admin: <%= f.check_box :is_admin, {}, true, false %>
-    <%= f.submit "Submit" %>
-
-<% end %>
+<div class="col">
+  <div class="row"><h1>Edit user</h1></div>
+  <%= form_for @user do |f| %>
+    <div class="form-group row">
+      <label for="user-email" class="col-2 col-form-label">Email</label>
+      <div class="col-12">
+        <%= f.text_field :email, class: 'form-control', id: 'user-email' %>
+      </div>
+    </div>
+    <div class="form-group row">
+        <label for="user-title" class="col-2 col-form-label">Admin</label>
+        <div class="col-1">
+          <%= f.check_box :is_admin, {class: 'form-control check-box', id: 'user-title'}, true, false %>
+        </div>
+    </div>
+    <div class="dates row">
+      <div class="date col">Created at: <%= @user.created_at.strftime('%d %b %y') %></div>
+      <div class="date col">Updated at: <%= @user.updated_at.strftime('%d %b %y') %></div>
+      <div class="button col"><%= f.submit 'Save', class: "user-save-button btn btn-outline-primary btn-lg"%></div>
+    </div>
+  <% end %>
+</div>
