fixing asset paths for svg

--- a/app/assets/stylesheets/svg_classes.scss
+++ b/app/assets/stylesheets/svg_classes.scss
@@ -5,34 +5,34 @@
 }
 .dojo-icon {
   width: 84px;
-  background: url(svg/dojo.svg) no-repeat;
+  background: url(asset-path('svg/dojo.svg')) no-repeat;
 }
 .location-icon {
   width: 41px;
-  background: url(svg/location.svg) no-repeat;
+  background: url(asset-path('svg/location.svg')) no-repeat;
 }
 .location-white-icon {
   width: 41px;
-  background: url(svg/location_white.svg) no-repeat;
+  background: url(asset-path('svg/location_white.svg')) no-repeat;
 }
 .add-people-icon {
-  background: url(svg/add_people.svg) no-repeat;
+  background: url(asset-path('svg/add_people.svg')) no-repeat;
 }
 .add-people-white-icon {
-  background: url(svg/add_people_white.svg) no-repeat;
+  background: url(asset-path('svg/add_people_white.svg')) no-repeat;
 }
 .date-range-icon {
-  background: url(svg/date_range.svg) no-repeat;
+  background: url(asset-path('svg/date_range.svg')) no-repeat;
 }
 .date-range-white-icon {
-  background: url(svg/date_range_white.svg) no-repeat;
+  background: url(asset-path('svg/date_range_white.svg')) no-repeat;
 }
 .resources-icon {
-  background: url(svg/resources.svg) no-repeat;
+  background: url(asset-path('svg/resources.svg')) no-repeat;
 }
 .email-icon {
-  background: url(svg/email.svg) no-repeat;
+  background: url(asset-path('svg/email.svg')) no-repeat;
 }
 .menu-icon {
-  background: url(svg/menu.svg) no-repeat;
+  background: url(asset-path('svg/menu.svg')) no-repeat;
 }
