#2 - fixed the extra > in from

--- a/app/views/photographers/_form.erb
+++ b/app/views/photographers/_form.erb
@@ -23,7 +23,7 @@
           </div>
       <%else%>
           <div class="dates row">
-            <div class="date col">></div>
+            <div class="date col"></div>
             <div class="date col"></div>
             <div class="button col"><%= f.submit 'Save', class: "image-save-button btn btn-outline-primary btn-lg"%></div>
           </div>
