--- a/app/views/home/schedule.erb
+++ b/app/views/home/schedule.erb
@@ -14,7 +14,9 @@
   </div>
 
   <%= render :partial => "layouts/image_carousel", :locals => { images: @images, with_nav: false } %>
-  <%= render :partial => "meetings/calendar", :locals => { date: @date, meetings_by_day: @meetings_by_day } %>
+  <%= render :partial => "meetings/calendar", :locals => { date: @date,
+                                                           meetings_by_day: @meetings_by_day,
+                                                           repeating_meetings: @repeating_meetings } %>
 
 </div>
 
